sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__guardian_approved_request_permissions_clears_status_without_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





• Working (0s • esc to interrupt)


› Ask Sofia to do anything

  gpt-5.6-sol default · /tmp/project
